force-app/main/default/objects/Address_Validation__mdt/Address_Validation__mdt.object-meta.xml
<CustomObject>
    <label>Address_Validation</label>
    <pluralLabel>Address_Validations</pluralLabel>
</CustomObject>