force-app/main/default/objects/Address_Validation__mdt/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>