force-app/main/default/objects/Address_Validation__mdt/fields/grant_type__c.field-meta.xml
<CustomField>
    <fullName>grant_type__c</fullName>
    <label>grant_type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>