force-app/main/default/objects/Address_Validation__mdt/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <label>Token_URL</label>
    <type>Url</type>
</CustomField>